new small changes

--- a/client/src/ComponentsCss/AdminPage.css
+++ b/client/src/ComponentsCss/AdminPage.css
@@ -7,6 +7,9 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
