--- a/client/src/ComponentsCss/login.css
+++ b/client/src/ComponentsCss/login.css
@@ -1,58 +1,57 @@
-.login-page {
+/* login.css */
+
+/* Style the form */
+form {
+    background: #fff;
+    padding: 20px 40px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
     width: 100%;
-    height: 100vh;
-    background-image: url(img/login_bg.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: right;
-}
-
-.sublog-page {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.login-box {
-    width: 500px;
-    height: 300px;
-    /* border: 2px solid black; */
-    padding: 35px;
-    background-color: rgba(58, 30, 238, 0.1);
-    border-radius: 15px;
-}
-
-.login-box input {
-    width: 85%;
-    height: 40px;
-    padding-left: 10px;
-}
-
-.login-box .lsubmit {
-    width: 150px;
-    border: none;
-    background-color: rgba(26, 8, 141, 0.4);
-    color: white;
-    cursor: pointer;
-}
-
-.login-box p {
-    background-color: white;
-    border: none;
-}
-
-.lrsubmit {
-    width: 200px;
-    height: 40px;
-    background-color: rgba(26, 8, 141, 0.4);
-    color: white;
     text-align: center;
-    line-height: 40px;
+    margin-top: 2pc;
+    margin-left: 15pc;
 }
 
-.lrsubmit>a {
+/* Style the input fields */
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+input[type="email"],
+input[type="email"] {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+/* Style the submit button */
+button[type="submit"] {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 10px 0;
+    background-color: #007BFF;
+    /* Bootstrap blue color */
+    border: none;
+    border-radius: 4px;
     color: white;
-    font-size: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Change the button color on hover */
+button[type="submit"]:hover {
+    background-color: #0056b3;
 }
