--- a/client/src/ComponentsCss/AdminPage.css
+++ b/client/src/ComponentsCss/AdminPage.css
@@ -1,15 +1,16 @@
+.father{
+    margin: 15px 15px 0px 15px;
+}
 .admin-container {
-    background: white;
-    margin: 3pc;
-    margin-left: 13pc;
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    /* margin: 30px 0px 0px 10px; */
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid black;
 }
 
 h1 {
@@ -37,6 +38,11 @@ textarea {
     margin: 10px 0;
 }
 
+.Admin_div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .file-input-container input[type="file"] {
     display: none;
 }
@@ -59,7 +65,7 @@ textarea {
     display: flex;
     align-items: center;
     padding: 10px 15px;
-    margin: 10px 0;
+    margin: 10px;
     background-color: #48bb78;
     color: white;
     border: none;
@@ -97,5 +103,45 @@ textarea {
     border: 1px solid;
     margin-right: 5px;
     padding: 2px;
+    cursor: pointer;
+}
+.selected_img{
+    i{
+        visibility: hidden;
+    }
+    cursor: pointer;
+}
+.selected_img img{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+.selected_img:hover{
+i{
+    visibility: visible;
+}
+}
+
+.selected_img {
+    position: relative;
+    display: inline-block;
+}
+
+.selected_img img {
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.selected_img .fas.fa-close {
+    position: absolute;
+    top: 8px;
+    border: 1px solid black;
+    right: 5px;
+    color: black;
+    border-radius: 50%;
+    padding: 5px;
     cursor: pointer;
 }
