--- a/client/src/ComponentsCss/Gallery.css
+++ b/client/src/ComponentsCss/Gallery.css
@@ -1,55 +1,62 @@
 .gallery {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-start;
     margin: 20px;
-}
-
-.big-image img {
+  }
+  
+  .big-image img {
     width: 600px;
     height: 400px;
     border-radius: 15px;
     object-fit: cover;
-}
-
-.thumbnail-row {
+    margin-left: 20px;
+  }
+  
+  .thumbnail-row {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-}
-
-.thumbnail {
+    margin-right: 20px;
+  }
+  
+  .thumbnail {
     width: 100px;
-    height: 100px;
-    margin: 0 10px;
+    height: 85px;
+    margin: 10px 0;
     border: 2px solid transparent;
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
     transition: border 0.3s;
-}
-
-.thumbnail img {
+  }
+  
+  .thumbnail img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.thumbnail.active {
-    border-color: #aa2b57;
-}
-
-.nav-button {
+  }
+  
+  .thumbnail.active {
+    border-color: blueviolet;
+  }
+  
+  .nav-button {
     background-color: #aa2b57;
     color: white;
     border: none;
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
-    margin: 0 10px;
+    margin: 10px 0;
     transition: background-color 0.3s;
-}
-
-.nav-button:hover {
+  }
+  
+  .nav-button:hover {
     background-color: #882145;
-}
+  }
+  
+  .buttons_of_gallery{
+    display: flex;
+    flex-direction: row;
+  }
