--- a/client/src/ComponentsCss/product.css
+++ b/client/src/ComponentsCss/product.css
@@ -1,8 +1,6 @@
 .productpage {
     width: 100%;
     margin-top: 1pc;
-    /* height: 100vh; */
-    /* background-color: azure; */
     display: flex;
     gap: 20px;
     align-items: center;
@@ -13,84 +11,100 @@
 .productpage .productbox {
     width: 290px;
     height: 350px;
-    /* border: 1px solid black; */
     border-radius: 15px;
     text-align: center;
     position: relative;
     cursor: pointer;
-
+    /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
+    /* transition: transform 0.3s ease, box-shadow 0.3s ease; */
 }
 
 .productbox img {
     width: 100%;
     height: 75%;
     border-radius: 12px;
-    margin: 5px 7px;
-}
-
-.productbox .img2 {
-    position: relative;
-    left: 0;
-    display: none;
-}
-
-/* .productbox:hover .img1{
-    transition: 1s;
-  
-  display: none;
-  } */
-
-.productbox:hover .img2 {
-    display: block;
+    margin: 5px 3px;
+    object-fit: cover;
 }
 
 .productbox b {
-    font-size: 20px;
-
+    font-size: 18px;
+    margin-top: 10px;
+    display: block;
+    font-weight: 500;
 }
 
 .viewbox {
     width: 100%;
     text-align: center;
     margin-top: 2pc;
-
 }
 
 .waicon {
     position: absolute;
-    margin: 1pc 0pc 0pc 16pc;
-}
-
-.productbox:hover .iconbox i {
-    opacity: 1;
-}
-
-.productbox:hover .iconbox {
-    top: -50px;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
 }
 
 .iconbox {
-    position: relative;
-    top: -70px;
-    transition: 1s;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
 
+.productbox:hover .iconbox {
+    opacity: 1;
 }
 
 .iconbox i {
-    margin: 10px;
-    background-color: rgb(92, 53, 3);
+    background-color: rgba(92, 53, 3, 0.9);
     line-height: 40px;
     font-size: 25px;
-    padding: 07px 05px 0px 05px;
+    padding: 7px 5px;
     border-radius: 5px;
     color: white;
     cursor: pointer;
-    opacity: 0;
-    transition: 0.5s linear;
+    transition: background-color 0.3s ease;
 }
 
 .iconbox i:hover {
-    background-color: rgb(146, 102, 45);
+    background-color: rgba(146, 102, 45, 0.9);
+}
+
+.button-container {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    z-index: 2;
+}
+
+.button-container button {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button-container button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .quickbox {
@@ -101,10 +115,11 @@
     height: 470px;
     background-color: white;
     border-radius: 10px;
-    /* display: flex;  --> Uncomment for horizontal centering of content */
     justify-content: center;
     align-items: center;
     border: 1px solid black;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
 }
 
 .quickimg {
@@ -113,25 +128,20 @@
     height: 85%;
     border-radius: 10px;
     background-color: transparent;
-    /* Make background transparent */
     position: relative;
 }
 
-.quickimg>img {
+.quickimg > img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
 
 .quickbox button {
     position: absolute;
-    /* Position button within quickbox */
     top: 10px;
-    /* Adjust top position as needed */
     right: 10px;
-    /* Adjust right position as needed */
     background-color: transparent;
-    /* Make button background transparent */
     border: none;
-    /* Remove button border */
-    /* Add hover styles or padding for better user experience (optional) */
 }
